# serve-folder

./: README.md
serve_folder/: Cargo.toml  default-icon.rc
serve_folder/src/: handlers.rs  main.rs  models.rs  state.rs  web.rs  zip.rs
serve_folder/web/: index.html  script.js  style.css
serve_installer/: Cargo.toml  app.manifest  build.rs  serve_installer.exe.manifest
serve_installer/src/: main.rs
