[package]
name = "serve_folder"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
tempfile = "3.3"
futures-util = "0.3"
rayon = "1.8.0"
walkdir = "2.3.3"
num_cpus = "1.16.0"
fastrand = "1.9.0"
